# app/src/Controller/PropriedadeController.php
@@ -2,9 +2,7 @@
 
 namespace App\Controller;
 
-use App\Service\LoginService;
-use App\Service\PessoaDadosService;
-use App\Service\PessoaService;
+use App\Service\PropriedadeService;
 use Odan\Session\SessionInterface;
 use OpenApi\Attributes as OA;
 use Psr\Container\ContainerInterface;
@@ -12,22 +10,20 @@ use Psr\Http\Message\RequestInterface;
 use Psr\Http\Message\ResponseInterface;
 use Throwable;
 
-class PessoaController extends DefaultController
+class PropriedadeController extends DefaultController
 {
     public function __construct(
         private ContainerInterface $containerInterface,
-        private LoginService $loginService,
-        private PessoaService $pessoaService,
-        private PessoaDadosService $pessoaDadosService,
+        private PropriedadeService $propriedadeService
     )
     {
         parent::__construct($containerInterface);
     }
 
     #[OA\Post(
-        path: '/api/pessoa',
-        summary: 'Realiza o cadastro completo de pessoa',
-        tags: ['Pessoa'],
+        path: '/api/propriedade',
+        summary: 'Realiza o cadastro completo de propriedade',
+        tags: ['Propriedade'],
         security: [['api_key' => []]],
         requestBody: new OA\RequestBody(
             required: true,
@@ -36,20 +32,11 @@ class PessoaController extends DefaultController
                 schema: new OA\Schema(
                     type: 'object',
                     properties: [
-                        new OA\Property(property: 'nome', type: 'string', description: 'Nome do usuário'),
-                        new OA\Property(property: 'sobrenome', type: 'string', description: 'Sobrenome do usuário'),
-                        new OA\Property(property: 'dt_nascimento', type: 'string', description: 'Data de nascimento do usuário (YYYY-MM-DD)'),
-                        new OA\Property(property: 'sexo', type: 'string', description: 'Sexo do usuário (M/F)'),
-                        new OA\Property(property: 'cpf', type: 'string', description: 'CPF do usuário'),
-                        new OA\Property(property: 'naturalidade', type: 'string', description: 'Cidade natal do usuário'),
-                        new OA\Property(property: 'rg', type: 'string', description: 'Registro Geral (RG) do usuário'),
-                        new OA\Property(property: 'orgao_emissao', type: 'string', description: 'Órgão emissor do RG'),
-                        new OA\Property(property: 'dt_emissao', type: 'string', description: 'Data de emissão do RG (YYYY-MM-DD)'),
-                        new OA\Property(property: 'telefone', type: 'string', description: 'Número de telefone do usuário'),
-                        new OA\Property(property: 'celular', type: 'string', description: 'Número de telefone celular do usuário'),
-                        new OA\Property(property: 'email', type: 'string', description: 'Endereço de e-mail do usuário'),
+                        new OA\Property(property: 'tipo', type: 'integer', description: 'Nome do usuário'),
+                        new OA\Property(property: 'observacao', type: 'string', description: 'Sobrenome do usuário'),
+                        new OA\Property(property: 'proprietario', type: 'integer', description: 'Data de nascimento do usuário (YYYY-MM-DD)'),
                         new OA\Property(property: 'cep', type: 'string', description: 'CEP do endereço do usuário'),
-                        new OA\Property(property: 'cidade', type: 'string', description: 'Cidade do endereço do usuário'),
+                        new OA\Property(property: 'cidade', type: 'integer', description: 'Cidade do endereço do usuário'),
                         new OA\Property(property: 'logradouro', type: 'string', description: 'Nome da rua do endereço do usuário'),
                         new OA\Property(property: 'bairro', type: 'string', description: 'Bairro do endereço do usuário'),
                         new OA\Property(property: 'numero', type: 'string', description: 'Número do endereço do usuário'),
@@ -72,8 +59,7 @@ class PessoaController extends DefaultController
     {
         try {
             $data = $this->getDataRequest($request);
-            
-            $this->pessoaService->cadastrar($data);
+            $this->propriedadeService->cadastrar($data);
 
             return $this->jsonResponse($response, $session, true);
         } catch (Throwable $e) {
@@ -82,9 +68,9 @@ class PessoaController extends DefaultController
     }
 
     #[OA\Get(
-        path: '/api/pessoa/listagem',
-        summary: 'Listagem de Pessoas do Sistema',
-        tags: ['Pessoa'],
+        path: '/api/propriedade/listagem',
+        summary: 'Listagem de Propriedade do Sistema',
+        tags: ['Propriedade'],
         security: [['api_key' => []]],
         parameters: [
             new OA\Parameter(
@@ -102,11 +88,18 @@ class PessoaController extends DefaultController
                 description: 'CPF'
             ),
             new OA\Parameter(
-                name: 'rg',
+                name: 'tipo',
+                in: 'query',
+                required: false,
+                schema: new OA\Schema(type: 'integer'),
+                description: 'Tipo'
+            ),
+            new OA\Parameter(
+                name: 'endereco',
                 in: 'query',
                 required: false,
                 schema: new OA\Schema(type: 'string'),
-                description: 'RG'
+                description: 'Endereco'
             ),
             new OA\Parameter(
                 name: 'pagina',
@@ -131,10 +124,11 @@ class PessoaController extends DefaultController
         try {
             $data = $this->getDataRequest($request);
 
-            $result = $this->pessoaDadosService->listagem(
+            $result = $this->propriedadeService->listagem(
                 $data['nome'] ?? null,
                 $data['cpf'] ?? null,
-                $data['rg'] ?? null,
+                $data['endereco'] ?? null,
+                $data['tipo'] ?? null,
                 $data['pagina'] ?? null
             );
             return $this->jsonResponse($response, $session, $result);
@@ -144,9 +138,9 @@ class PessoaController extends DefaultController
     }
 
     #[OA\Get(
-        path: '/api/pessoa/{id}',
-        summary: 'Consultar Pessoa',
-        tags: ['Pessoa'],
+        path: '/api/propriedade/{id}',
+        summary: 'Consultar Propriedade',
+        tags: ['Propriedade'],
         security: [['api_key' => []]],
         parameters: [
             new OA\Parameter(
@@ -172,16 +166,16 @@ class PessoaController extends DefaultController
         try {
             $data = $this->getDataRequest($request);
             $data['id'] = $this->getAttributeRequest($request, 'id');
-            return $this->jsonResponse($response, $session, $this->pessoaDadosService->consultarDados($data['id']));
+            return $this->jsonResponse($response, $session, $this->propriedadeService->consultarDados($data['id']));
         } catch (Throwable $e) {
             return $this->handleException($response, $e, $session);
         }
     }
 
     #[OA\Delete(
-        path: '/api/pessoa/{id}',
-        summary: 'Excluir Pessoa do Sistema',
-        tags: ['Pessoa'],
+        path: '/api/propriedade/{id}',
+        summary: 'Excluir Propriedade do Sistema',
+        tags: ['Propriedade'],
         security: [['api_key' => []]],
         parameters: [
             new OA\Parameter(
@@ -208,7 +202,7 @@ class PessoaController extends DefaultController
             $data = $this->getDataRequest($request);
             $data['id'] = $this->getAttributeRequest($request, 'id');
 
-            $this->pessoaDadosService->deletar($data['id']);
+            $this->propriedadeService->deletar($data['id']);
 
             return $this->jsonResponse($response, $session, true);
         }catch(Throwable $e){
@@ -217,9 +211,9 @@ class PessoaController extends DefaultController
     }
 
     #[OA\Put(
-        path: '/api/pessoa/{id}',
-        summary: 'Atualiza o cadastro completo de pessoa',
-        tags: ['Pessoa'],
+        path: '/api/propriedade/{id}',
+        summary: 'Atualiza o cadastro completo de propriedade',
+        tags: ['Propriedade'],
         security: [['api_key' => []]],
         parameters: [
             new OA\Parameter(
@@ -237,20 +231,11 @@ class PessoaController extends DefaultController
                 schema: new OA\Schema(
                     type: 'object',
                     properties: [
-                        new OA\Property(property: 'nome', type: 'string', description: 'Nome do usuário'),
-                        new OA\Property(property: 'sobrenome', type: 'string', description: 'Sobrenome do usuário'),
-                        new OA\Property(property: 'dt_nascimento', type: 'string', description: 'Data de nascimento do usuário (YYYY-MM-DD)'),
-                        new OA\Property(property: 'sexo', type: 'string', description: 'Sexo do usuário (M/F)'),
-                        new OA\Property(property: 'cpf', type: 'string', description: 'CPF do usuário'),
-                        new OA\Property(property: 'naturalidade', type: 'string', description: 'Cidade natal do usuário'),
-                        new OA\Property(property: 'rg', type: 'string', description: 'Registro Geral (RG) do usuário'),
-                        new OA\Property(property: 'orgao_emissao', type: 'string', description: 'Órgão emissor do RG'),
-                        new OA\Property(property: 'dt_emissao', type: 'string', description: 'Data de emissão do RG (YYYY-MM-DD)'),
-                        new OA\Property(property: 'telefone', type: 'string', description: 'Número de telefone do usuário'),
-                        new OA\Property(property: 'celular', type: 'string', description: 'Número de telefone celular do usuário'),
-                        new OA\Property(property: 'email', type: 'string', description: 'Endereço de e-mail do usuário'),
+                        new OA\Property(property: 'tipo', type: 'integer', description: 'Nome do usuário'),
+                        new OA\Property(property: 'observacao', type: 'string', description: 'Sobrenome do usuário'),
+                        new OA\Property(property: 'proprietario', type: 'integer', description: 'Data de nascimento do usuário (YYYY-MM-DD)'),
                         new OA\Property(property: 'cep', type: 'string', description: 'CEP do endereço do usuário'),
-                        new OA\Property(property: 'cidade', type: 'string', description: 'Cidade do endereço do usuário'),
+                        new OA\Property(property: 'cidade', type: 'integer', description: 'Cidade do endereço do usuário'),
                         new OA\Property(property: 'logradouro', type: 'string', description: 'Nome da rua do endereço do usuário'),
                         new OA\Property(property: 'bairro', type: 'string', description: 'Bairro do endereço do usuário'),
                         new OA\Property(property: 'numero', type: 'string', description: 'Número do endereço do usuário'),
@@ -275,34 +260,9 @@ class PessoaController extends DefaultController
             $data = $this->getDataRequest($request);
             $data['id'] = $this->getAttributeRequest($request, 'id');
             
-            $this->pessoaDadosService->atualizar($data['id'], $data);
+            $this->propriedadeService->atualizar($data['id'], $data);
 
             return $this->jsonResponse($response, $session, true);
-        } catch (Throwable $e) {
-            return $this->handleException($response, $e, $session);
-        }
-    }
-
-    #[OA\Get(
-        path: '/api/pessoa/select',
-        summary: 'Select de Pessoas',
-        tags: ['Pessoa'],
-        security: [['api_key' => []]],
-        responses: [
-            new OA\Response(response: 200, description: 'Requisição bem-sucedida'),
-            new OA\Response(response: 400, description: 'Requisição inválida, dados incorretos ou faltando parâmetros'),
-            new OA\Response(response: 500, description: 'Erro interno do servidor')
-        ]
-    )]
-    public function select(
-        RequestInterface       $request,
-        ResponseInterface      $response,
-        SessionInterface       $session,
-    ): ResponseInterface 
-    {
-        try {
-            $result = $this->pessoaDadosService->select();
-            return $this->jsonResponse($response, $session, $result);
         } catch (Throwable $e) {
             return $this->handleException($response, $e, $session);
         }
